--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,7 @@
 body {
+  background: url("./images/background.jpg");
+  background-size: 100% 100%;
+  min-width: 40rem;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
